objects/Feature_Set__c.object
<CustomObject>
    <fields>
        <fullName>Ad_Listing_To_Page__c</fullName>
        <label>Ad Listing To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Beach Destinations-Index Page</fullName>
                </value>
                <value>
                    <fullName>Beach Destinations-Region_Index Page</fullName>
                </value>
                <value>
                    <fullName>City Page</fullName>
                </value>
                <value>
                    <fullName>Conference Center-Index Page</fullName>
                </value>
                <value>
                    <fullName>Conference Center-Region_Index Page</fullName>
                </value>
                <value>
                    <fullName>Convention Center-Index Page</fullName>
                </value>
                <value>
                    <fullName>Convention Center-Region_Index Page</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>CVB-Index Page</fullName>
                </value>
                <value>
                    <fullName>CVB-Region_Index Page</fullName>
                </value>
                <value>
                    <fullName>Destination_Global/Home Page</fullName>
                </value>
                <value>
                    <fullName>Destination_Region Page</fullName>
                </value>
                <value>
                    <fullName>Destination_State Page</fullName>
                </value>
                <value>
                    <fullName>Directory page</fullName>
                </value>
                <value>
                    <fullName>Event Planning Blog</fullName>
                </value>
                <value>
                    <fullName>Global/Home Page</fullName>
                </value>
                <value>
                    <fullName>Golf Destinations-Index Page</fullName>
                </value>
                <value>
                    <fullName>Golf Destinations-Region_Index Page</fullName>
                </value>
                <value>
                    <fullName>Magnificient Mile Page</fullName>
                </value>
                <value>
                    <fullName>Meetings Page</fullName>
                </value>
                <value>
                    <fullName>Metro Area Page</fullName>
                </value>
                <value>
                    <fullName>Mountain Destinations-Index Page</fullName>
                </value>
                <value>
                    <fullName>Mountain Destinations-Region_Index Page</fullName>
                </value>
                <value>
                    <fullName>Overview Page</fullName>
                </value>
                <value>
                    <fullName>Primary CVB</fullName>
                </value>
                <value>
                    <fullName>Promotions Page</fullName>
                </value>
                <value>
                    <fullName>Region Page</fullName>
                </value>
                <value>
                    <fullName>Resort &amp; Luxury Destination-Index Page</fullName>
                </value>
                <value>
                    <fullName>Resort &amp; Luxury Destinations-Region_Index Page</fullName>
                </value>
                <value>
                    <fullName>Secondary CVB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advertisement_Tab__c</fullName>
        <label>Advertisement Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Native</fullName>
                </value>
                <value>
                    <fullName>All Venues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Badge_Types__c</fullName>
        <label>Badge Types</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3” x 4” Single Side</fullName>
                </value>
                <value>
                    <fullName>3” x 4” Double Side</fullName>
                </value>
                <value>
                    <fullName>4” x 6” Single Side</fullName>
                </value>
                <value>
                    <fullName>4” x 6” Double Side</fullName>
                </value>
                <value>
                    <fullName>Custom Size</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barcode__c</fullName>
        <label>Barcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Neighborhood__c</fullName>
        <label>City-Neighborhood</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adelaide</fullName>
                </value>
                <value>
                    <fullName>Akron</fullName>
                </value>
                <value>
                    <fullName>Alabama Gulf Coast</fullName>
                </value>
                <value>
                    <fullName>Albuquerque</fullName>
                </value>
                <value>
                    <fullName>Alexandria</fullName>
                </value>
                <value>
                    <fullName>Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Anaheim</fullName>
                </value>
                <value>
                    <fullName>Anchorage</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Ashville</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Atlantic City</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Barcelona</fullName>
                </value>
                <value>
                    <fullName>Baton Rouge</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Bergen County</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Bloomington</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Bridgewater</fullName>
                </value>
                <value>
                    <fullName>Brisbane</fullName>
                </value>
                <value>
                    <fullName>Brussels</fullName>
                </value>
                <value>
                    <fullName>Budapest</fullName>
                </value>
                <value>
                    <fullName>Buffalo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Opportunity_N__r.CloseDate</formula>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Opportunity_N__r.ContractEndDate__c</formula>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Opportunity_N__r.ContractStartDate__c</formula>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contractor_s_Name__c</fullName>
        <label>Contractor’s Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alex Whitney</fullName>
                </value>
                <value>
                    <fullName>Andy Kim</fullName>
                </value>
                <value>
                    <fullName>Brian Black</fullName>
                </value>
                <value>
                    <fullName>Brian Gauthier</fullName>
                </value>
                <value>
                    <fullName>Chuck Currin</fullName>
                </value>
                <value>
                    <fullName>Dan Rich</fullName>
                </value>
                <value>
                    <fullName>Dan Russotto</fullName>
                </value>
                <value>
                    <fullName>David Kaiser</fullName>
                </value>
                <value>
                    <fullName>Gerald Herod</fullName>
                </value>
                <value>
                    <fullName>Jake Swanson</fullName>
                </value>
                <value>
                    <fullName>Jax Walsh</fullName>
                </value>
                <value>
                    <fullName>John Morgan</fullName>
                </value>
                <value>
                    <fullName>Justin Burris</fullName>
                </value>
                <value>
                    <fullName>Ken Adams</fullName>
                </value>
                <value>
                    <fullName>Lenny Ardiles</fullName>
                </value>
                <value>
                    <fullName>Matt Haff</fullName>
                </value>
                <value>
                    <fullName>Micah Wedemeyer</fullName>
                </value>
                <value>
                    <fullName>Phillip Sharpless</fullName>
                </value>
                <value>
                    <fullName>Tim Alexander</fullName>
                </value>
                <value>
                    <fullName>Tommy Hunke</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>New Mexico</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Scotland</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_of_Other__c</fullName>
        <label>Details of Other</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access to Email Templates</fullName>
                </value>
                <value>
                    <fullName>Bulk Registration</fullName>
                </value>
                <value>
                    <fullName>Certificate of Completion</fullName>
                </value>
                <value>
                    <fullName>Contact Manipulation</fullName>
                </value>
                <value>
                    <fullName>Custom Style Sheet</fullName>
                </value>
                <value>
                    <fullName>Cvent Golden Package</fullName>
                </value>
                <value>
                    <fullName>Data Entry Fee</fullName>
                </value>
                <value>
                    <fullName>Data Storage infrastructure</fullName>
                </value>
                <value>
                    <fullName>Email Blast</fullName>
                </value>
                <value>
                    <fullName>Embeded Media</fullName>
                </value>
                <value>
                    <fullName>Event Template Overhaul</fullName>
                </value>
                <value>
                    <fullName>News Letter Template</fullName>
                </value>
                <value>
                    <fullName>Pending Registrations</fullName>
                </value>
                <value>
                    <fullName>Unlimited Responses</fullName>
                </value>
                <value>
                    <fullName>US Customer Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EB_Type__c</fullName>
        <label>EB Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Advanced with Mobile</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>Complex with Mobile</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Medium with Mobile</fullName>
                </value>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Simple with Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>Feature End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment_Fee__c</fullName>
        <label>Equipment Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_Status__c</fullName>
        <label>Equipment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BOCA Printer</fullName>
                </value>
                <value>
                    <fullName>Box Office Laptop</fullName>
                </value>
                <value>
                    <fullName>CC USB Swiper</fullName>
                </value>
                <value>
                    <fullName>Credit Card Swiper</fullName>
                </value>
                <value>
                    <fullName>Epson Printer</fullName>
                </value>
                <value>
                    <fullName>Handheld Mobile Scanners</fullName>
                </value>
                <value>
                    <fullName>Hard Tickets</fullName>
                </value>
                <value>
                    <fullName>iPod Scanner</fullName>
                </value>
                <value>
                    <fullName>IPOd Touch</fullName>
                </value>
                <value>
                    <fullName>Linea Pro vs 4</fullName>
                </value>
                <value>
                    <fullName>TicketMob Hard Stock</fullName>
                </value>
                <value>
                    <fullName>Ticket Scanner</fullName>
                </value>
                <value>
                    <fullName>Touch Screen HP</fullName>
                </value>
                <value>
                    <fullName>Wireless Handheld scanners</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Name_Location__c</fullName>
        <description>This field is to be used for EEM and Onsite Solutions contracts.</description>
        <inlineHelpText>This field is to be used for EEM and Onsite Solutions contracts.</inlineHelpText>
        <label>Event Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <description>case #06025199</description>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feature_Type__c</fullName>
        <formula>IF(ISPICKVAL(Feature__c, "Accounts Added"),"1",
IF(ISPICKVAL(Feature__c, "Contact Custom Fields Added"),"1",
IF(ISPICKVAL(Feature__c, "Contacts Added"),"1",
IF(ISPICKVAL(Feature__c, "Dashboards"),"1",
IF(ISPICKVAL(Feature__c, "Email Limit Raised"),"1",
IF(ISPICKVAL(Feature__c, "Event Builder(s)"),"1",
IF(ISPICKVAL(Feature__c, "Event Builder(s) - Advanced"),"1",
IF(ISPICKVAL(Feature__c, "Event Builder(s) - Advanced with Mobile"),"1",
IF(ISPICKVAL(Feature__c, "Event Builder(s) - Complex"),"1",
IF(ISPICKVAL(Feature__c, "Event Builder(s) - Complex with Mobile"),"1",
IF(ISPICKVAL(Feature__c, "Event Builder(s) - Medium"),"1",
IF(ISPICKVAL(Feature__c, "Event Builder(s) - Medium with Mobile"),"1",
IF(ISPICKVAL(Feature__c, "Event Builder(s) - Simple"),"1",
IF(ISPICKVAL(Feature__c, "Event Builder(s) - Simple with Mobile"),"1",
IF(ISPICKVAL(Feature__c, "Reply Emails Added"),"1",
IF(ISPICKVAL(Feature__c, "Survey Questions Added"),"1",
IF(ISPICKVAL(Feature__c, "Surveys Added"),"1",
IF(ISPICKVAL(Feature__c, "User Logins Added"),"1",
IF(ISPICKVAL(Feature__c, "Onsite/Online Training"),"1",
IF(ISPICKVAL(Feature__c, "Custom work"),"1",
IF(ISPICKVAL(Feature__c, "Cvent Payment Services"),"1",
"0")))))))))))))))))))))</formula>
        <label>Feature Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <label>Feature</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>***Cvent Payment Services</fullName>
                </value>
                <value>
                    <fullName>1:1 Meeting Schedular</fullName>
                </value>
                <value>
                    <fullName>12 HTML pages per event</fullName>
                </value>
                <value>
                    <fullName>1 Pg PMPP EPrint</fullName>
                </value>
                <value>
                    <fullName>1 Pg RePrint</fullName>
                </value>
                <value>
                    <fullName>2 Pg PMPP EPrint</fullName>
                </value>
                <value>
                    <fullName>2 Pg RePrint</fullName>
                </value>
                <value>
                    <fullName>3rd Party Web Service Creation</fullName>
                </value>
                <value>
                    <fullName>5 GB document of Storage</fullName>
                </value>
                <value>
                    <fullName>Abstract Management</fullName>
                </value>
                <value>
                    <fullName>Access to account : Wright Leadership Institute WLITIL001</fullName>
                </value>
                <value>
                    <fullName>Accounts Added</fullName>
                </value>
                <value>
                    <fullName>Acuvent Fees</fullName>
                </value>
                <value>
                    <fullName>Additional Account Emails</fullName>
                </value>
                <value>
                    <fullName>Additional Contacts</fullName>
                </value>
                <value>
                    <fullName>Additional Custom Contact Fields</fullName>
                </value>
                <value>
                    <fullName>Additional database contacts</fullName>
                </value>
                <value>
                    <fullName>Additional Data Storage</fullName>
                </value>
                <value>
                    <fullName>Additional Direct Costs for Client Services Task</fullName>
                </value>
                <value>
                    <fullName>Additional Instances for Multi-Instance/City/Selection/Language (Qty 5)</fullName>
                </value>
                <value>
                    <fullName>Additional language</fullName>
                </value>
                <value>
                    <fullName>Additional Languages</fullName>
                </value>
                <value>
                    <fullName>Additional Locations</fullName>
                </value>
                <value>
                    <fullName>Additional Round of Changes</fullName>
                </value>
                <value>
                    <fullName>Additional Surveys</fullName>
                </value>
                <value>
                    <fullName>Additional User Logins</fullName>
                </value>
                <value>
                    <fullName>Address Book Segmentation</fullName>
                </value>
                <value>
                    <fullName>Adjustment FEE</fullName>
                </value>
                <value>
                    <fullName>Adjustment Fees</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Fee__c</fullName>
        <label>License Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Milestone_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_to_be_Rolled_up__c</fullName>
        <formula>if(ISPICKVAL(Product__c,"PSG"),"TRUE", CASE( Feature__c , "Event Builder(s)", "TRUE", "Survey Builder(s)", "TRUE", "FALSE"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not to be Rolled-up</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_N__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Feature Sets</relationshipLabel>
        <relationshipName>Feature_Sets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Original_Feature_Start_Date__c</fullName>
        <label>Original Feature Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Country_Name__c</fullName>
        <label>Other Country Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Region__c</fullName>
        <label>Other Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Of_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Of Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <description>This field lists down the partner related to EEM or Onsite Solutions contracts</description>
        <inlineHelpText>This field lists down the partner related to EEM or Onsite Solutions contracts</inlineHelpText>
        <label>Partner Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WEG</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Per_Diem__c</fullName>
        <label>Per Diem</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Item_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Per Item/Hr Fee</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Item_Hr_Fee_Rack__c</fullName>
        <label>Per Item/Hr Fee (Rack)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Please_specify_Other_City__c</fullName>
        <label>Other City Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_feature_set_number__c</fullName>
        <label>Previous feature set number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Additional Direct Costs for Client Services Task</fullName>
                </value>
                <value>
                    <fullName>Adjustment Fees</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AT - Attendance</fullName>
                </value>
                <value>
                    <fullName>AT - Check-in</fullName>
                </value>
                <value>
                    <fullName>AT-Content Management</fullName>
                </value>
                <value>
                    <fullName>AT - leads</fullName>
                </value>
                <value>
                    <fullName>AT - leads (Direct To Exhibitor)</fullName>
                </value>
                <value>
                    <fullName>AT - Travel &amp; Addtional Support</fullName>
                </value>
                <value>
                    <fullName>AT - Universal Lead Capture</fullName>
                </value>
                <value>
                    <fullName>CC Reader</fullName>
                </value>
                <value>
                    <fullName>CSN - Competitive Market Ad</fullName>
                </value>
                <value>
                    <fullName>CSN - NewMarket</fullName>
                </value>
                <value>
                    <fullName>CSN - Social Wall</fullName>
                </value>
                <value>
                    <fullName>CSN - Suggested Ad</fullName>
                </value>
                <value>
                    <fullName>CSN - Supplier Bundles</fullName>
                </value>
                <value>
                    <fullName>CSN - Supplier Certification</fullName>
                </value>
                <value>
                    <fullName>CSN - Supplier Feature</fullName>
                </value>
                <value>
                    <fullName>CSN - Supplier Reports</fullName>
                </value>
                <value>
                    <fullName>CSN - Video Ad</fullName>
                </value>
                <value>
                    <fullName>Custom Documentation</fullName>
                </value>
                <value>
                    <fullName>Custom Training</fullName>
                </value>
                <value>
                    <fullName>Cvent Connect</fullName>
                </value>
                <value>
                    <fullName>Damaged Equipment</fullName>
                </value>
                <value>
                    <fullName>Decision Street</fullName>
                </value>
                <value>
                    <fullName>Dedicated Full Time India Resource</fullName>
                </value>
                <value>
                    <fullName>Dedicated Full Time US Resource</fullName>
                </value>
                <value>
                    <fullName>EMI</fullName>
                </value>
                <value>
                    <fullName>EMI - Attendee Hub</fullName>
                </value>
                <value>
                    <fullName>EMI - Elitemeetings.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Configuration_Fee__c</fullName>
        <label>Professional Configuration Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Management_Fee__c</fullName>
        <label>Project Management Fee</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QWeighted__c</fullName>
        <formula>Total_Fees__c * Opportunity_N__r.Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Total Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <formula>Opportunity_N__r.ContractReceived__c</formula>
        <label>Contract Received Date</label>
        <type>Date</type>
    </fields>
</CustomObject>